# alfred_timestamps

./: .gitignore  .markdownlint.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/:  build.yaml   build.yaml
src/: main.rs
workflow/: info.plist
