[package]
name = "alfred_timestamps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
cli-clipboard = "0.2.1"
env_logger = "0.9"
humantime = "2.1"
log = "0.4"
powerpack = "0.3.1"

