[package]
name = "alfred_timestamps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.20"
cli-clipboard = "0.2.1"
env_logger = "0.9.1"
humantime = "2.1.0"
log = "0.4.17"
powerpack = "0.4.1"

[dev-dependencies]
assert-json-diff = "2.0.2"
pretty_assertions = "1.3.0"
rstest = "0.15.0"
serde = "1.0.145"
serde_json = "1.0.85"